// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle Component renders circle changing 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   changing"
      data-cy="changing"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle default 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle modified 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   modified"
      data-cy="modified"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with  tail 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 string"
      data-cy="tail"
    >
      tail
    </div>
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with head 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head string"
      data-cy="head"
    >
      head
    </div>
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with index 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_0"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    >
      0
    </p>
    <div
      class="text text_type_input text_color_input mt-4 absolute tail60 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with isSmall 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle  small default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with letter 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      >
        a
      </p>
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with letter as head 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head string"
      data-cy="head"
    >
      head
    </div>
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      >
        a
      </p>
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with react element as head 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    >
      <div>
        Custom Head Content
      </div>
    </div>
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle with react element as tail 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    >
      <div>
        Custom Tail Content
      </div>
    </div>
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;

exports[`Circle Component renders circle without letter 1`] = `
<DocumentFragment>
  <div
    class="content "
    data-cy="index_undefined"
  >
    <div
      class="text text_type_input text_color_input mb-4 absolute head element"
      data-cy="head"
    />
    <div
      class="circle   default"
      data-cy="default"
    >
      <p
        class="text text_type_circle text_color_input letter"
      />
    </div>
    <p
      class="text text_type_input text_color_input mt-4 absolute index"
    />
    <div
      class="text text_type_input text_color_input mt-4 absolute tail30 element"
      data-cy="tail"
    />
  </div>
</DocumentFragment>
`;
